# qtforkawesome

./: .gitignore  CMakeLists.txt  README.md  global.h  icon.h  qtforkawesome.cpp  qtforkawesome.h  renderer.cpp  renderer.h  utils.h
iconengineplugin/: CMakeLists.txt  global.h  iconengine.cpp  iconengine.h  main.cpp  qtforkawesomeiconengine.json
qtforkawesome/: CMakeLists.txt  global.h  icon.h  iconfwd.h  renderer.cpp  renderer.h  utils.cpp  utils.h
qtforkawesome/scripts/: yaml2enum.pl
qtforkawesome/tests/: renderer.cpp
qtforkawesomequickimageprovider/: CMakeLists.txt  global.h  provider.cpp  provider.h
qtquickforkawesome/: CMakeLists.txt  global.h  imageprovider.cpp  imageprovider.h
scripts/: yaml2enum.pl
tests/: rendering.cpp
